Fixed Team Page Second Col Spacing

--- a/style_m.scss
+++ b/style_m.scss
@@ -282,6 +282,7 @@ $image-height-std: 240px;
 		}
 	}
 	#teamtable tr td:nth-child(2) {
+			width: 77%; 
 	}
 
 
@@ -364,6 +365,7 @@ $image-height-std: 240px;
 			}
 		}
 		#teamtable tr td:nth-child(2) {
+			width: 77%; 
 		}
 	}
 
@@ -403,6 +405,7 @@ $image-height-std: 240px;
 			}
 		}
 		#teamtable tr td:nth-child(2) {
+			width: 77%; 
 		}
 	}
 
